# ARC56Registry

./: .gitignore  CLAUDE.md  README.md  arc56.links.csv
clients/0M3REXE/whisperbid/python/: README.md  pyproject.toml  state.json
clients/0M3REXE/whisperbid/python/src/arc56_generated_0m3re_8ecd6867/: WhisperBid_ad7b42ec.py
clients/0M3REXE/whisperbid/python/src/arc56_generated_0m3rexe_whisperbid/: __init__.py
clients/0xDarioSanchez/ALGO-SC/python/: README.md  pyproject.toml  state.json
clients/0xDarioSanchez/ALGO-SC/python/src/arc56_generated_0xdar_e9ef203e/: __init__.py
clients/0xYuvi/EENDHAN/python/: README.md  pyproject.toml  state.json
clients/0xYuvi/EENDHAN/python/src/arc56_generated_0xyuvi_eendhan/: Eendhan_17054c6f.py  __init__.py
clients/0xYuvi/TrustAnchor/python/: README.md  pyproject.toml  state.json
clients/0xYuvi/TrustAnchor/python/src/arc56_generated_0xyuv_2c82b6e3/: IdentityRegistry_8b7065c3.py
clients/0xYuvi/TrustAnchor/python/src/arc56_generated_0xyuvi_trustanchor/: TrustAnchor_3ac8ef3e.py  TruthRegistry_36fbeecc.py  __init__.py
clients/ADD183/Algo-Farmar/python/: README.md  pyproject.toml  state.json
clients/ADD183/Algo-Farmar/python/src/arc56_generated_add18_d0bb0588/: FarmerContract_74baae8c.py  __init__.py
clients/Aarti-panchal01/verifi.ed/python/: README.md  pyproject.toml  state.json
clients/Aarti-panchal01/verifi.ed/python/src/arc56_generated_aarti_79db36fb/: __init__.py
clients/Aarti-panchal01/verifi.ed/python/src/arc56_generated_aarti_panchal01_verifi_ed/: VerifiedProtocol_6470122f.py
clients/Adarsh-pratap-singh09/Water-tank/python/: README.md  pyproject.toml  state.json
clients/Adarsh-pratap-singh09/Water-tank/python/src/arc56_generated_adars_09d8c090/: WaterLogger_12d1ba88.py
clients/Adarsh-pratap-singh09/Water-tank/python/src/arc56_generated_adarsh_pratap_singh09_water_tank/: __init__.py
clients/Adarshkumar76/campusMarket/python/: README.md  pyproject.toml  state.json
clients/Adarshkumar76/campusMarket/python/src/arc56_generated_adars_764f0655/: CampusMarketplace_36dfe96f.py
clients/Adarshkumar76/campusMarket/python/src/arc56_generated_adarshkumar76_campusmarket/: __init__.py
clients/Aditya060806/Ciphera/python/: README.md  pyproject.toml  state.json
clients/Aditya060806/Ciphera/python/src/arc56_generated_adity_2ade63e6/: CredentialManager_25f86a34.py  NullifierRegistry_c2b841a8.py
clients/Aditya060806/Ciphera/python/src/arc56_generated_aditya060806_ciphera/: __init__.py
clients/AdityaNik/AlgoSwap/python/: README.md  pyproject.toml  state.json
clients/AdityaNik/AlgoSwap/python/src/arc56_generated_adity_16063abe/: MultiPoolAMMContract_a2a34682.py
clients/AdityaNik/AlgoSwap/python/src/arc56_generated_adityanik_algoswap/: AMMContract_83c9aedb.py  SwapContract_841fb754.py  __init__.py
clients/AdityaWagh19/Cadencia-A2A-Platform/python/: README.md  pyproject.toml  state.json
clients/AdityaWagh19/Credencia/python/: README.md  pyproject.toml  state.json
clients/AdityaWagh19/Credencia/python/src/arc56_generated_adity_780262d2/: CreditScore_a47301ef.py
clients/AdityaWagh19/Credencia/python/src/arc56_generated_adityawagh19_credencia/: __init__.py
clients/Adityasingh2824/AlgoEase/python/: README.md  pyproject.toml  state.json
clients/Adityasingh2824/AlgoEase/python/src/arc56_generated_adity_bcdfa93c/: EscrowContract_14f3d373.py  EscrowContract_604a75d4.py
clients/Adityasingh2824/AlgoEase/python/src/arc56_generated_adityasingh2824_algoease/: EscrowContract_443e1480.py  __init__.py
clients/Aeztrest/BlockSign/python/: README.md  pyproject.toml  state.json
clients/Aeztrest/BlockSign/python/src/arc56_generated_aeztrest_blocksign/: __init__.py
clients/Algorand-Africa/algorand-nigeria-smart-contracts/python/: README.md  pyproject.toml  state.json
clients/Algorand-Africa/algorand-nigeria-smart-contracts/python/src/arc56_generated_algor_6af513eb/: __init__.py
clients/Algorand-Africa/algorand-nigeria-smart-contracts/python/src/arc56_generated_algorand_africa_algorand_nigeria_smart_contracts/: EventAssetClaimer_8ef02381.py
clients/Algorand-Developer-Retreat/DML-CHAIN/python/: README.md  pyproject.toml  state.json
clients/Algorand-Developer-Retreat/DML-CHAIN/python/src/arc56_generated_algorand_developer_retreat_dml_chain/: DMLChain_23fd873c.py  __init__.py
clients/Algorand-Developer-Retreat/abel/python/: README.md  pyproject.toml  state.json
clients/Algorand-Developer-Retreat/abel/python/src/arc56_generated_algor_b2469fd6/: AssetLabeling_9d1ec9f4.py
clients/Algorand-Developer-Retreat/abel/python/src/arc56_generated_algorand_developer_retreat_abel/: __init__.py
clients/Algorand-Developer-Retreat/makerx-ai-agents/python/: README.md  pyproject.toml  state.json
clients/Algorand-Developer-Retreat/makerx-ai-agents/python/src/arc56_generated_algor_e08d65d9/: AiRegistry_b5382e1a.py
clients/Algorand-Developer-Retreat/smart-wallet-for-agent-to-agent-interaction/python/: README.md  pyproject.toml  state.json
clients/Algorand-Developer-Retreat/wasm-vrf-example/python/: README.md  pyproject.toml  state.json
clients/Algorand-Developer-Retreat/web-vrf-example/python/: README.md  pyproject.toml  state.json
clients/Amanrajguptaa/Ticketer/python/: README.md  pyproject.toml  state.json
clients/Amanrajguptaa/Ticketer/python/src/arc56_generated_amanr_91ddd378/: __init__.py
clients/Ananyaa-08/Refugee-Identity-System/python/: README.md  pyproject.toml  state.json
clients/AndaruHP/algorand-smart-contract/python/: README.md  pyproject.toml  state.json
clients/AndaruHP/fair-split-protocol/python/: README.md  pyproject.toml  state.json
clients/Aniketwarule/CryptoZombies_Algorand/python/: README.md  pyproject.toml  state.json
clients/Aniketwarule/NFT_Marketplace/python/: README.md  pyproject.toml  state.json
clients/Aniketwarule/Synthra/python/: README.md  pyproject.toml  state.json
clients/AnirudhPratapSinghYadav/AlgoVault/python/: README.md  pyproject.toml  state.json
clients/AnirudhPratapSinghYadav/Bharat-Algorand-SupplyChain/python/: README.md  pyproject.toml  state.json
pages/: index.html
(+44845 files in other folders)
