[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-0xyuvi-eendhan"
version = "1.1.2026071814"
description = "Generated ARC-56 Algorand smart-contract clients for 0xYuvi/EENDHAN."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "0xYuvi" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "0xYuvi", "EENDHAN"]
dependencies = [
    "algokit-utils>=4.0.1,<5.0.0",
    "py-algorand-sdk>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_0xyuvi_eendhan"]
