[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-0xyuv_2c82b6e3"
version = "1.3.2026071921"
description = "Generated ARC-56 Algorand smart-contract clients for 0xYuvi/TrustAnchor."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "0xYuvi" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "0xYuvi", "TrustAnchor"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_0xyuv_2c82b6e3"]
