[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-add18_d0bb0588"
version = "1.3.2026071921"
description = "Generated ARC-56 Algorand smart-contract clients for ADD183/Algo-Farmar."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ADD183" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "ADD183", "Algo-Farmar"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_add18_d0bb0588"]
