[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-aarti-panchal01-verifi-ed"
version = "1.2.2026071814"
description = "Generated ARC-56 Algorand smart-contract clients for Aarti-panchal01/verifi.ed."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aarti-panchal01" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "Aarti-panchal01", "verifi.ed"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_aarti_panchal01_verifi_ed"]
