[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-adars_09d8c090"
version = "1.3.2026071921"
description = "Generated ARC-56 Algorand smart-contract clients for Adarsh-pratap-singh09/Water-tank."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Adarsh-pratap-singh09" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "Adarsh-pratap-singh09", "Water-tank"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_adars_09d8c090"]
