[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-adityasingh2824-algoease"
version = "1.2.2026071814"
description = "Generated ARC-56 Algorand smart-contract clients for Adityasingh2824/AlgoEase."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Adityasingh2824" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "Adityasingh2824", "AlgoEase"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_adityasingh2824_algoease"]
