[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-aeztr_0f84fb19"
version = "1.3.2026071921"
description = "Generated ARC-56 Algorand smart-contract clients for Aeztrest/BlockSign."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aeztrest" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "Aeztrest", "BlockSign"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_aeztr_0f84fb19"]
