[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-algorand-africa-algorand-nigeria-smart-contracts"
version = "1.2.2026071814"
description = "Generated ARC-56 Algorand smart-contract clients for Algorand-Africa/algorand-nigeria-smart-contracts."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Algorand-Africa" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "Algorand-Africa", "algorand-nigeria-smart-contracts"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_algorand_africa_algorand_nigeria_smart_contracts"]
