[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-algor_b2469fd6"
version = "1.3.2026071921"
description = "Generated ARC-56 Algorand smart-contract clients for Algorand-Developer-Retreat/abel."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Algorand-Developer-Retreat" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "Algorand-Developer-Retreat", "abel"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_algor_b2469fd6"]
