[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-ananyaa-08-refugee-identity-system"
version = "1.1.2026071814"
description = "Generated ARC-56 Algorand smart-contract clients for Ananyaa-08/Refugee-Identity-System."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ananyaa-08" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "Ananyaa-08", "Refugee-Identity-System"]
dependencies = [
    "algokit-utils>=4.0.1,<5.0.0",
    "py-algorand-sdk>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_ananyaa_08_refugee_identity_system"]
