[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-anany_a01d3d45"
version = "1.3.2026071921"
description = "Generated ARC-56 Algorand smart-contract clients for Ananyaa-08/Refugee-Identity-System."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ananyaa-08" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "Ananyaa-08", "Refugee-Identity-System"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_anany_a01d3d45"]
