[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-andaruhp-algorand-smart-contract"
version = "1.1.2026071814"
description = "Generated ARC-56 Algorand smart-contract clients for AndaruHP/algorand-smart-contract."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AndaruHP" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "AndaruHP", "algorand-smart-contract"]
dependencies = [
    "algokit-utils>=4.0.1,<5.0.0",
    "py-algorand-sdk>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_andaruhp_algorand_smart_contract"]
