[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc56-generated-andar_e4ee6ba0"
version = "1.3.2026071921"
description = "Generated ARC-56 Algorand smart-contract clients for AndaruHP/algorand-smart-contract."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AndaruHP" }]
keywords = ["algorand", "arc56", "avm", "smart-contract", "generated-client", "AndaruHP", "algorand-smart-contract"]
dependencies = [
    "algokit-utils>=4.2.3,<5.0.0",
    "py-algorand-sdk>=2.11.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/scholtz/Arc56Registry"
Repository = "https://github.com/scholtz/Arc56Registry"

[tool.hatch.build.targets.wheel]
packages = ["src/arc56_generated_andar_e4ee6ba0"]
